   
[tool.poetry]
name = "peerctl"
repository = "https://github.com/fullctl/peerctl"
version = "1.0.0-rc6"
description = "ix control"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development"
]


[tool.poetry.scripts]
peerctl = "peerctl.cli:main"


[tool.poetry.dependencies]
python = "^3.7"
fullctl = { git = "https://github.com/fullctl/fullctl.git", branch = "prep-release" }

netom = { git = "https://github.com/20c/netom.git", branch = "update-deps" }

[tool.poetry.dev-dependencies]
# tests
codecov = ">=2"
coverage = ">=5"
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
pytest-cov = "*"

# linting
# bandit = ">=1.6.2"
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = "^1.2.3"

# ctl
ctl = ">=1"
jinja2 = "^3"
tmpl = ">=1"
# v4 released 2022-03-31
twine = "^3.3.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
